Viscunam hero passive

--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -32,6 +32,8 @@ Add {{ effect.parameter.value }} views
 View gained with view acquisition skill {% if effect.parameter.value >= 100 %}increased{% else %}decreased{% endif %} by {{ effect.parameter.value | divided_by: 100.0 }}x to {{ target }}
 {% when "RateChangeView" %}
 Gain {{ effect.parameter.value }}% of self's base view
+{% NotDamageSkillNeedViewValueChange %}
+View cost of self's non-damaging skill changed by {{ effect.parameter.value }}
 {% when "MultipleDefence" %}
 {% assign turnDefinition = "next attack" %}
 {% if effect.parameter.value == 0 %}Nullify incoming damage to {{ target }}{% else %}Incoming damage to {{ target }} {% if effect.parameter.value >= 100 %}increased{% else %}reduced{% endif %} by {{ effect.parameter.value | divided_by: 100.0 }}x{% endif %}
