--- a/_includes/item-icon.html
+++ b/_includes/item-icon.html
@@ -2,7 +2,8 @@
 {%- assign rewardType = include.rewardType | default: 3 %}
 {%- if rewardType == 3 %}
 {%- assign item = site.data.ItemMaster[id] -%}
-<span class="item" title="{{ item.description }}"><img src="/cdn/Sprite/item_{{ item.resourceName }}.png" loading="lazy"></span>
+{%- assign itemWiki = site.data.wiki.Item[include.id] -%}
+<span class="item" title="{{ itemWiki.description | default: item.description }}"><img src="/cdn/Sprite/item_{{ item.resourceName }}.png" loading="lazy"></span>
 {%- else %}
 {%- if rewardType == 1 %}
 {%- assign card = site.data.CardMaster[id] %}
