--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -87,7 +87,7 @@
 {% endfor %}
 <h2 id="h{{ include.stockId }}-stats">Stats</h2>
     
-<div class="hero3">
+<div class="table-scroll">
     <table>
         <tr>
             <th>Rarity</th><th>Level</th><th>HP</th><th>ATK</th><th>SPD</th><th>View</th>
