--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -74,6 +74,7 @@
 {% endfor %}
 <h2 id="s{{ include.stockId }}-stats">Stats</h2>
 
+<div class="table-scroll">
 <table>
     <tr>
         <th>Level</th><th>HP</th><th>ATK</th><th>SPD</th><th>View</th>
@@ -88,6 +89,7 @@
     {% endfor %}
 {% endfor %}
 </table>
+</div>
 
 <h2>Skills</h2>
     <h3>Active</h3>
