--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -64,7 +64,7 @@ Heal {{ target }} for {{ effect.parameter.value }}% of own ATK value
 {% when "HealMultipleAttack" %}
 Increase recovery amount of {{ target }}'s healing skill by {{ effect.parameter.value }}%
 {% when "HealMultipleDefence" %}
-Multiply recovery amount of {{ target }}'s healing skill by {{ effect.parameter.value }}%
+Reduce recovery amount of {{ target }}'s healing skill by {{ 100 | minus: effect.parameter.value }}%
 {% when "NeedViewChange" %}
 {% assign turnDefinition = "turn" %}
 Skill View cost {% if effect.parameter.value >= 100 %}Up{% else %}Down{% endif %} by {{ effect.parameter.value | divided_by: 100.0 }}x for {{ target }}
