--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -11,7 +11,7 @@
 {% assign sprites = sprites | append: "," | append: include.extra_sprites %}
 {% endif %}
 
-<div id="s{{ include.stockId }}" class="contain elementNone">
+<div id="s{{ include.stockId }}" role="tabpanel" tabindex="0"  class="tabcontent contain elementNone">
     <div class="heroinfobox">
         <div class="header">
             <div class="name">{{ page.title }}</div>
@@ -49,7 +49,7 @@
 {% if include.BIO_S01 != "" %}
 <details open>
 <summary>Side Story (Translated)</summary>
-<div markdown="1">
+<div markdown="block">
 {{ include.BIO_S01 }}
 </div>
 </details>
