--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,12 @@
   <title>{{ page.title }}{% if page.url != "/" %} - Live A Hero Wiki{% endif %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   {% if page.hidden %}<meta name="robots" content="noindex">{% endif %}
   <meta name="theme-color" content="#ffa726">
   <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
   <link rel="stylesheet" type="text/css" href="/assets/main.css">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace: 'index.html', '' }}">
 </head>
