--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,12 +13,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
   <link rel="stylesheet" type="text/css" href="/assets/main.css">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace: 'index.html', '' }}">
+  <style>{% include style/tabs.min.css %}</style>
 </head>
 
 <body>
   <div class="sidebar">
     <header class="sidebar__logo" role="banner">
-      <img src="/assets/img/logo.png" width="300" height="117">
+      <img src="/assets/img/logo.png" width="250" height="98">
     </header>
     <nav class="sidebar__nav">
       <div class="sidebar__nav-interior">
