Lazy load wiki logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 <body>
   <div class="sidebar">
     <header class="sidebar__logo" role="banner">
-      <img src="/assets/img/logo.png" width="250" height="98">
+      <img src="/assets/img/logo.png" width="250" height="98" loading="lazy">
     </header>
     <nav class="sidebar__nav">
       <div class="sidebar__nav-interior">
