Revert "Directly use canvas for atlas"
This reverts commit 2eaeb543cde56ee6d5ff1e099b0b295c42bd7f4e.

--- a/_includes/atlas-gallery.html
+++ b/_includes/atlas-gallery.html
@@ -1,4 +1,3 @@
 <div class="atlas-gallery" data-sprites="{{ include.sprites }}">
-<canvas width="640" height="1024"></canvas>
-<select></select>
+<img width="640" height="1024">
 </div>
