--- a/assets/main.scss
+++ b/assets/main.scss
@@ -358,9 +358,8 @@ figcaption {
   padding: 0 10px;
 }
 .atlas-gallery {
-  img, canvas {
+  img {
     display: block;
-    max-width: 100%;
   }
   select {
     width: 100%;
@@ -368,7 +367,7 @@ figcaption {
 }
 @media (min-width: 1064px) {
   .atlas-gallery {
-    img, canvas {
+    img {
       padding: 0 159px;
     }
   }
