Remove site.data. prefix

--- a/_includes/chara-affiliation.html
+++ b/_includes/chara-affiliation.html
@@ -1,4 +1,4 @@
-{% assign a = site.data.wiki.Affiliation[include.affiliation] %}
+{% assign a = wiki.Affiliation[include.affiliation] %}
 {% if a %}
 <abbr title="{{ include.affiliation }}">{{ a.en }}</abbr>
 {% else %}
