--- a/_includes/shop-table.html
+++ b/_includes/shop-table.html
@@ -1,5 +1,5 @@
 {% assign id = include.id | downcase %}
-{% assign shopData = site.data.stores[id] %}
+{% assign shopData = stores[id] %}
 <h2>{{ shopData.storeName }}</h2>
 <table>
   <tr>
