--- a/_includes/skill-table-manual.html
+++ b/_includes/skill-table-manual.html
@@ -7,8 +7,8 @@
     {% for id in skillIds %}
     {% assign nid = id | plus: 0 %}
     {% assign sid = id | downcase %}
-    {% assign skill = site.data.SkillMaster[sid] %}
-    {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
+    {% assign skill = SkillMaster[sid] %}
+    {% assign skillName = wiki.SkillNameTranslation[nid] %}
     <tr>
         <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td><td title="{{ skill.description }}">{% include skill-description.html skill=skill %}</td><td>{{ skill.useView }}</td>
     </tr>
@@ -19,8 +19,8 @@
     {% for id in equipmentSkills %}
     {% assign nid = id | plus: 0 %}
     {% assign sid = id | downcase %}
-    {% assign skill = site.data.SkillMaster[sid] %}
-    {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
+    {% assign skill = SkillMaster[sid] %}
+    {% assign skillName = wiki.SkillNameTranslation[nid] %}
     <tr>
         <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td><td title="{{ skill.description }}">{% include skill-description.html skill=skill %}</td><td>{{ skill.useView }}</td>
     </tr>
