--- a/_includes/voice-table.html
+++ b/_includes/voice-table.html
@@ -12,7 +12,7 @@
   {% for part in greeting %}
     {% assign translated = include[part] %}
     {% capture key %}voice_{{ n }}_{{ part }}{% endcapture %}
-    {% assign jp_line = site.data.processed.jp_greeting[key] %}
+    {% assign jp_line = processed.jp_greeting[key] %}
 
     {% if translated or jp_line %}<tr><th>{{ part | replace: "h_", "Hero " | replace: "s_", "Sidekick " }}</th>
 <td markdown="1" class="translate" data-translate="{% if translated %}{{ jp_line | escape }}{% endif %}">
@@ -23,7 +23,7 @@
   {% for part in whitelist %}
     {% assign p = part %}
     {% assign key = "SERIF" | append: name | append: part %}
-    {% assign jp_line = site.data.processed.jp_serif[key] %}
+    {% assign jp_line = processed.jp_serif[key] %}
     {% if name contains "PLAYER" %}
       {% if part != "TRAINED" %}{% continue %}{% endif %}
       {% assign p = key | replace: "SERIF_", "" %}
