--- a/_includes/chara-illustrator.html
+++ b/_includes/chara-illustrator.html
@@ -1,6 +1,6 @@
 {% assign names = include.illustrator | processVoiceActor %}
 {% for name in names %}
-{% assign en = site.data.wiki.Illustrator[name].en %}
+{% assign en = wiki.Illustrator[name].en %}
 <a href="/illustrators/#{{ en | default: name | slugify }}">
 {%- if en %}
 <abbr title="{{ name }}">{{ en }}</abbr>
