--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -1,5 +1,5 @@
 {% assign eid = include.skillEffect.skillEffectId | downcase %}
-{% assign effectParent = site.data.SkillEffectMaster[eid] %}
+{% assign effectParent = SkillEffectMaster[eid] %}
 {% assign skillEffectJson = effectParent.skillEffectJson %}
 {% assign target = include.skillEffect.effectTarget | skill_target %}
 {% assign skip_effect = skillEffectJson | should_skip_skill_effect %}
