--- a/_includes/skill-table-v2.html
+++ b/_includes/skill-table-v2.html
@@ -9,8 +9,8 @@
 {% for id in include.skillIds %}
 {% assign nid = id | plus: 0 %}
 {% assign sid = id | downcase %}
-{% assign skill = site.data.SkillMaster[sid] %}
-{% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
+{% assign skill = SkillMaster[sid] %}
+{% assign skillName = wiki.SkillNameTranslation[nid] %}
     <div title="{{ sid }}" class="translate re-A" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</div>
     <div class="re-C">{{ skill.useView}}</div>
     <div class="re-B" title="{{ skill.description }}">{% include skill-description.html skillId=nid skill=skill %}</div>
