--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -11,8 +11,8 @@
     {% for id in include.skillIds %}
     {% assign nid = id | plus: 0 %}
     {% assign sid = id | downcase %}
-    {% assign skill = site.data.SkillMaster[sid] %}
-    {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
+    {% assign skill = SkillMaster[sid] %}
+    {% assign skillName = wiki.SkillNameTranslation[nid] %}
     <tr>
         <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td>
         <td title="{{ skill.description }}">{% include skill-description.html skillId=nid skill=skill %}</td>
