--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -14,7 +14,7 @@
 <div id="s{{ include.stockId }}" role="tabpanel" tabindex="0"  class="tabcontent contain elementNone">
     <div class="heroinfobox">
         <div class="header">
-            <div class="name">{{ page.title }}</div>
+            <div class="name">{{ title }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
         {% include atlas-gallery.html sprites=sprites %}
