--- a/_includes/header.html
+++ b/_includes/header.html
@@ -137,6 +137,9 @@
           <li>
             <a href="/guide/office/">Office</a>
           </li>
+           <li>
+            <a href="/guide/blooming/">Blooming</a>
+          </li>
         </ul>
         <h3 class="section__header">Tools</h3>
         <ul>
