--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -40,7 +40,7 @@
                 </tr>
                 <tr>
                     <th colspan="2">Affliation office</th>
-                    <td colspan="2">{% include chara-affiliation.html affiliation=firstCardInfo.affiliationOffice %}</td>
+                    <td colspan="2">{% include chara-affiliation.html masked=page.masked affiliation=firstCardInfo.affiliationOffice %}</td>
                 </tr>
             </tbody>
         </table>
