--- a/_includes/chara-affiliation.html
+++ b/_includes/chara-affiliation.html
@@ -1,5 +1,7 @@
 {% assign a = site.data.wiki.Affiliation[include.affiliation] %}
-{% if a %}
+{% if include.masked %}
+???
+{% elsif a %}
 <abbr title="{{ include.affiliation }}">{{ a.en }}</abbr>
 {% else %}
 {{ include.affiliation }}
