--- a/assets/main.scss
+++ b/assets/main.scss
@@ -560,6 +560,12 @@ $elementName: fire, water, earth, light, shadow;
   margin-top: 10px;
   padding: 5px;
 }
+.skill-evo {
+  margin-bottom: 30px;
+}
+.indent {
+  padding-left: 20px;
+}
 // Event page
 .event-infobox {
   border: 2px solid $colorDark;
