--- a/_includes/header.html
+++ b/_includes/header.html
@@ -138,7 +138,7 @@
             <a href="/guide/office/">Office</a>
           </li>
            <li>
-            <a href="/guide/blooming/">Blooming</a>
+            <a href="/guide/blooming/">Bloom & Skill Tree</a>
           </li>
         </ul>
         <h3 class="section__header">Tools</h3>
