--- a/_includes/skill-description.html
+++ b/_includes/skill-description.html
@@ -10,7 +10,8 @@
 {%- endif %}
 
 {% for skillEffect in randomGroup.items %}
-{% if skillEffect.prob > 0 %}
+{% comment %}Exclude skill tree effect for now{% endcomment %}
+{% if skillEffect.prob > 0 and skillEffect.conditionEntityId == 0 %}
 {% include skill-effect-description.html skillEffect=skillEffect timing=include.skill.timing %}
 {% endif %}
 {% endfor %}
