--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content">
     <aside class="wiki-msg">    
-        :confetti_ball: Thank you for participating in LAH Wiki Survey (2022 edition)! <a href="/blog/2022/wiki-survey-2022/">The results are out</a>
+        Looking for more contributors to help with Wiki. If interested, please get in touch in <code>#lah-wiki</code> channel of <a href="https://discord.gg/zpc7PCk">LAH English Discord</a>.
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
